# emoskit

./: .travis.yml  4-minheap-internal.cpp  4-minheap-internal.h  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  array.h  backend.h  call.h  channel.h  circbuf.h  client_blocking_call.h  client_config.cpp  client_config.h  client_context.h  common.cpp  common.h  config.h.in  config_parser.cpp  config_parser.h  configure  configure.ac  create_stream.h  ev_epoll.cpp  ev_epoll.h  ev_loop.cpp  ev_loop.h  event.h  gcc_atomic.h  install-protobuf.sh  logger.cpp  logger.h  method.h  method_handler.h  mm.h  msg_queue.h  msg_queue_interface.h  murmur_hash.cpp  (+31 more)
codegen/: IDLParser.h  client_generator.cpp  client_generator.h  client_template.cpp  client_template.h  name_generator.cpp  name_generator.h  proto_parser.cpp  proto_parser.h  server_generator.cpp  server_generator.h  server_template.cpp  server_template.h  syntax.cpp  syntax_tree.cpp  syntax_tree.h  util.cpp  util.h
